--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Fahad Salim is a self-trained professional Web Developer &  Content Creator Since 2017, He has worked as a web designer for Kyatsa, a leading web development company. </p>
+                    <p>Fahad Salim is a self-trained Web Developer &  Content Creator Since 2017, He has worked as a web designer for Kyatsa, a  web development company. </p>
                 </div>
                 <div class="col-lg-4">
                     <p> Fahad lives in Kottayam,Kerala, India.As an engineering student, Fahad worked as a freelance web developer for parallel host company, a hosting provider. </p>
@@ -201,7 +201,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; fahad salim 2021
+                        Copyright &copy; fahad salim 2018
                     </div>
                 </div>
             </div>
