--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Fahad Salim - Web Developer</title>
+    <title>Fahad Salim - Web Designer</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -72,7 +72,7 @@
                     <div class="intro-text">
                         <h1 class="name">FAHAD SALIM</h1>
                         <hr class="star-light">
-                        <span class="skills">Web  Developer</span>
+                        <span class="skills">Web  Designer</span>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Fahad Salim is a self-trained Web Developer &  Content Creator Since 2017, He has worked as a web designer for Kyatsa, a  web development company. </p>
+                    <p>Fahad Salim is a self-trained Web Designer &  Content Creator Since 2018, He has worked as a web designer for Kyatsa, a  web development company. </p>
                 </div>
                 <div class="col-lg-4">
                     <p> Fahad lives in Kottayam,Kerala, India.As an engineering student, Fahad worked as a freelance web developer for parallel host company, a hosting provider. </p>
