--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-			    <h1 class="name"><a href="https://www.fahadsalim.in" target="_blank">FAHAD SALIM</a></h1>
+			    <h1 class="name"><a href="https://www.fahadsalim.in">FAHAD SALIM</a></h1>
                         <hr class="star-light">
                         <span class="skills">Web  Designer</span>
                     </div>
